deps/v8/test/message/fail/class-accessors-private-undefined-setter-count.out
# Copyright 2019 the V8 project authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.
*%(basename)s:8: TypeError: '#foo' was defined without a setter
    this.#foo++;
    ^
TypeError: '#foo' was defined without a setter
    at new C (*%(basename)s:8:5)
    at *%(basename)s:12:1
